--- a/configs/powercube_driver.yaml
+++ b/configs/powercube_driver.yaml
@@ -2,7 +2,7 @@ can_module: PCAN
 can_device: /dev/pcan_he
 can_baudrate: 1000
 modul_ids: [13,14]
-joint_names: [led_tilt_joint, led_pan_joint]
+joint_names: [neck_pan_joint, neck_tilt_joint]
 max_accelerations: [1.3, 1.3]
 min_publish_duration: 0.1
 horizon: 0.1
