--- a/configs/sensor_configuration.yaml
+++ b/configs/sensor_configuration.yaml
@@ -31,6 +31,7 @@ Node:
     ft_pull_freq: 800
     sensor_frame: "fts_reference_link"
     transform_frame: "fts_transform_frame"
+    sim: false
 
 ThresholdFilter:
   linear_threshold: 2.5
