--- a/configs/powercube_driver.yaml
+++ b/configs/powercube_driver.yaml
@@ -1,7 +1,7 @@
-can_module: PCAN
-can_device: /dev/pcan_he
-can_baudrate: 1000
-modul_ids: [13, 14]
+can_module: SOCKETCAN
+can_device: can0
+can_baudrate: 250
+modul_ids: [1, 2]
 joint_names: [neck_tilt_joint, neck_pan_joint]
 max_accelerations: [1.3, 1.3] # specs [25.133, 16.755]
 min_publish_duration: 0.1
