--- a/package.xml
+++ b/package.xml
@@ -34,6 +34,8 @@
   <depend>gazebo_ros</depend>
   <depend>cob_mapping_slam</depend>
   <depend>cob_gazebo_worlds</depend>
+  <depend>iirob_filters</depend>
+  <depend>filters</depend>
 
 
   <test_depend>roslaunch</test_depend>
