--- a/configs/fts.yaml
+++ b/configs/fts.yaml
@@ -16,62 +16,29 @@ Node:
 
 Calibration:
     Offset:
-        n_measurements: 500
+        n_measurements: 20
         T_between_meas: 0.01
         isStatic: false # true= use static offset Calibration, false=use calibrate Sensor to 0 in current State
 
 ThresholdFilter:
-  linear_threshold: 2.5
-  angular_threshold: 0.3
+  name: ThresholdFilter
+  type: iirob_filters/ThresholdFilterWrench
+  params: {linear_threshold: 2.5,  angular_threshold: 0.3}
 
 LowPassFilter:
-    Force_x:
-        SamplingFrequency: 200.0
-        DampingFrequency: 15.0
-        DampingIntensity: -6.0
-    Force_y:
-        SamplingFrequency: 200.0
-        DampingFrequency: 15.0
-        DampingIntensity: -6.0
-    Force_z:
-        SamplingFrequency: 200.0
-        DampingFrequency: 15.0
-        DampingIntensity: -6.0
-    Torque_x:
-        SamplingFrequency: 200.0
-        DampingFrequency: 15.0
-        DampingIntensity: -6.0
-    Torque_y:
-        SamplingFrequency: 200.0
-        DampingFrequency: 15.0
-        DampingIntensity: -6.0
-    Torque_z:
-        SamplingFrequency: 200.0
-        DampingFrequency: 15.0
-        DampingIntensity: -6.0
-
+  name: LowPassFilter
+  type: iirob_filters/LowPassFilterWrench
+  params: {SamplingFrequency: 200.0, DampingFrequency: 15.0, DampingIntensity: -6.0}
+        
 MovingMeanFilter:
-    Force_x:
-        divider: 4
-    Force_y:
-        divider: 4
-    Force_z:
-        divider: 4
-    Torque_x:
-        divider: 4
-    Torque_y:
-        divider: 4
-    Torque_z:
-        divider: 4
+  name: MovingMeanFilter
+  type: filters/MovingMeanFilterWrench
+  params: {divider: 4}
 
 GravityCompensation:
-    #CoG:
-     #x: 0
-     #y: 0
-     #z: 0.027346102 # m
-    #force: 7.9459955 # f_G
-    sensor_frame: "fts_reference_link"
-    world_frame: "fts_base_link"
+  name: GravityCompensationWrench
+  type: iirob_filters/GravityCompensator
+  params: {world_frame: "base_link"}
 
 Publish:
     sensor_data: true
@@ -80,6 +47,3 @@ Publish:
     transformed_data: true
     gravity_compensated: true
     threshold_filtered: true
-    iirob_led: true
-
-
