--- a/configs/raw3_base_controller_afts.yaml
+++ b/configs/raw3_base_controller_afts.yaml
@@ -12,8 +12,8 @@ twist_controller:
   type: hibrid_force_controllers/AFTSController
   required_drive_mode: 3
   publish_rate: 50
-  max_rot_velocity: 0.4
-  max_trans_velocity: 0.6
+  max_rot_velocity: 1.0 #0.4
+  max_trans_velocity: 1.5 #0.6
   Controller:
     SamplingFrequency: 645.0
     DampingFrequency: 20.0
@@ -108,8 +108,8 @@ fake_fts_controller:
   type: hibrid_force_controllers/FTSControllerNoHw
   required_drive_mode: 3
   publish_rate: 50
-  max_rot_velocity: 0.2
-  max_trans_velocity: 0.2
+  max_rot_velocity: 1.0 #0.2
+  max_trans_velocity: 1.5 #0.2
   Controller:
     SamplingFrequency: 645.0
     DampingFrequency: 20.0
