--- a/configs/raw3_base_controller_fts.yaml
+++ b/configs/raw3_base_controller_fts.yaml
@@ -12,8 +12,8 @@ twist_controller:
   type: hibrid_force_controllers/FTSController
   required_drive_mode: 3
   publish_rate: 50
-  max_rot_velocity: 0.2
-  max_trans_velocity: 0.2
+  max_rot_velocity: 1.0 #0.2
+  max_trans_velocity: 1.5 #0.2
   Controller:
     SamplingFrequency: 645.0
     DampingFrequency: 20.0
@@ -61,7 +61,7 @@ twist_controller:
       steer_neutral_position: 180.0
     - steer: br_caster_rotation_joint
       drive: br_caster_r_wheel_joint
-      steer_neutral_position: 180.0
+      steer_neutral_position: -180.0
     - steer: fr_caster_rotation_joint
       drive: fr_caster_r_wheel_joint
       steer_neutral_position: 180.0
