--- a/configs/robotrainer_base_controller.yaml
+++ b/configs/robotrainer_base_controller.yaml
@@ -45,8 +45,8 @@ twist_controller:
   type: hibrid_force_controllers/FTSController
   required_drive_mode: 3
   publish_rate: 50
-  max_rot_velocity: 0.2
-  max_trans_velocity: 0.2
+  max_rot_velocity: 1.0 #0.2
+  max_trans_velocity: 1.5 #0.2
   Controller:
     SamplingFrequency: 645.0
     DampingFrequency: 20.0
@@ -85,19 +85,7 @@ twist_controller:
       d_phi_max: 12.0
       dd_phi_max: 40.0
 
-  wheels: *wheels # start front left, counter-clockwise for base_drive_chain compatibility
-    #- steer: fl_caster_rotation_joint
-      #drive: fl_caster_r_wheel_joint
-      #steer_neutral_position: 180.0
-    #- steer: bl_caster_rotation_joint
-      #drive: bl_caster_r_wheel_joint
-      #steer_neutral_position: 180.0
-    #- steer: br_caster_rotation_joint
-      #drive: br_caster_r_wheel_joint
-      #steer_neutral_position: 180.0
-    #- steer: fr_caster_rotation_joint
-      #drive: fr_caster_r_wheel_joint
-      #steer_neutral_position: 180.0
+  wheels: *wheels # start front left, counter-clockwise for base_drive_chain 
 
 ## odometry_controller
 odometry_controller:
