--- a/configs/robotrainer_base_controller.yaml
+++ b/configs/robotrainer_base_controller.yaml
@@ -47,7 +47,7 @@ twist_controller:
   publish_rate: 50
   max_rot_velocity: 1.0 #0.2
   max_trans_velocity: 1.5 #0.2
-  Controller:
+  FTSController:
     SamplingFrequency: 645.0
     DampingFrequency: 20.0
     DampingIntensity: -3.0
@@ -60,23 +60,21 @@ twist_controller:
     x_force_controller: True
     y_force_controller: True
     rot_controller: True
-    linear:
-        x_min_force: 3.0        # 5.0
-        x_max_force: 120.0
-        x_max_vel: 1.1
-        x_gain: 2               # 1/b
-        x_time_const: 1        # m/b   # 1/(2*pi*Fl)        
-        y_min_force: 3.0        # 5.0
-        y_max_force: 120.0
-        y_max_vel: 1.1
-        y_gain: 2               # 1/b
-        y_time_const: 1        # m/b   # 1/(2*pi*Fl)
-    angular:
-        min_torque: 0.1    # 0.5
-        max_torque: 30.0
-        max_rot_vel: 1.8
-        gain: 1
-        time_const: 0.25
+    x_min_force: 3.0        # 5.0
+    x_max_force: 120.0
+    x_max_vel: 1.1
+    x_gain: 2               # 1/b
+    x_time_const: 1        # m/b   # 1/(2*pi*Fl)        
+    y_min_force: 3.0        # 5.0
+    y_max_force: 120.0
+    y_max_vel: 1.1
+    y_gain: 2               # 1/b
+    y_time_const: 1        # m/b   # 1/(2*pi*Fl)
+    min_torque: 0.1    # 0.5
+    max_torque: 30.0
+    max_rot_vel: 1.8
+    gain: 1
+    time_const: 0.25
   defaults: # default settings for all wheels, can per overwritten per wheel
     steer_ctrl: # Parameters for tuning Impedance-Controller
       spring: 15.0
